src/test/ConstantFail2/ConstantFail2.expected
error: ConstantFail2.panda:2:5: constants must be immutable (found mutable type 'panda.core.MutableString')
error: ConstantFail2.panda:6:9: constants must be immutable (found mutable type 'Test'
2 errors
