src/test/ConstantFail2/ConstantFail2.panda
class Test {
    constant fail1 := new MutableString()

    @class
    method main() {
        constant fail2 := new Test()
    }
}